--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "swiper": "^12.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
