--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^5.3.5",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
